<resources>
    <string name="app_name">Baking App</string>

    <string name="recipe_overview_title">Baking Time</string>
    <string name="recipe_step_title">Baking Name</string>
    <string name="loading_recipes_text">Loading recipes…</string>
    <string name="title_recipestep_list">Recipe Steps</string>
    <string name="title_recipestep_detail">Recipe Step Detail</string>
    <string name="next_step">Next step</string>
    <string name="previous_step">Previous step</string>
    <string name="recipe_ingredients">Recipe ingredients</string>
    <string name="appwidget_text">Some ingredddsfsfsfient</string>
    <string name="add_widget">Add widget</string>
    <string name="previous_recipe">Refresh</string>
    <string name="preference_file_key">chosenrecipe</string>
    <string name="current_recipe_title">current_recipe_title</string>
    <string name="no_recipe_selected">No recipe chosen</string>
    <string name="current_recipe_ingredient_description">current_recipe_ingredient_description</string>
    <string name="no_recipe_selected_instruction">Launch the Baking app by clicking me and select a recipe. Then click on the refresh button below to see the ingredients.</string>
</resources>
