...
        android:layout_marginTop="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/navigate_preivous_step"
            android:background="@color/colorPrimaryDark"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/previous_step" />

        <Button
            android:id="@+id/navigate_next_step"
            android:layout_marginLeft="@dimen/default_margin"
            android:background="@color/colorPrimaryDark"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
...
