<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_selector"
    android:layout_marginTop="@dimen/default_margin"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="22sp"
        tools:text="hello" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

</LinearLayout>